# vandals-and-heroes

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: check.yaml
benches/: particles.rs
data/: config.ron
data/cars/Arcan/: body.glb  car.ron  wheel_back.glb  wheel_front.glb
data/cars/OxidizeMonk/: car.ron
data/maps/boozeena/: map.ron
data/maps/fostral/: map.ron
data/packs/: packs.ron
data/packs/root/: entities.ron
data/packs/root/entities/cube/: cube.glb
data/packs/root/entities/floor/: floor.glb
data/packs/root/entities/oxidize_monk/: body.glb
data/packs/root/levels/: main.ron
lib/content-packs/: Cargo.toml
lib/content-packs/src/: camera_controller.rs  content_pack.rs  definitions.rs  game.rs  instances.rs  main.rs  templates.rs
lib/content_packs/: Cargo.toml
lib/content_packs/src/: camera_controller.rs  content_pack.rs  definitions.rs  game.rs  instances.rs  main.rs  templates.rs
lib/ffi/: Cargo.toml
lib/ffi/src/: context.rs  lib.rs  window_win32.rs
shaders/: common.wgsl  map-draw.wgsl  model-draw.wgsl  shadow.wgsl  terrain-draw.wgsl
src/: camera.rs  config.rs  cyl_heightfield.rs  lib.rs  loader.rs  main.rs  model.rs  physics.rs  recorder.rs  render.rs  sphere_heightfield.rs  submission.rs  terrain.rs  texture.rs
tests/: drive_combinations.rs  headless_car.rs  oxidize_monk_drive.rs
tools/: convert-level.py
