[workspace]
resolver = "2"
members = ["lib/content-packs"]

[workspace.dependencies]
blade-graphics = "0.7"
blade-macros = "0.3"

[package]
name = "vandals-and-heroes"
version = "0.1.0"
edition = "2021"
publish = false

[lib]

[[bin]]
name = "game"
path = "bin/game/main.rs"

[dependencies]
base64 = "0.22"
choir = "0.7"
env_logger = "0.11"
gltf = "1"
log = "0.4"
nalgebra = "0.33"
png = "0.17"
profiling = "1"
ron = "0.8"
serde = { version = "1", features = ["serde_derive"] }
winit = "0.30"
# graphicis
blade-graphics.workspace = true
blade-macros.workspace = true
bytemuck = { version = "1", features = ["derive"] }
# physics
rapier3d = "0.22"

#[patch."https://github.com/kvark/blade"]
#blade-graphics = { path = "../blade/blade-graphics" }
#blade-macros = { path = "../blade/blade-macros" }
