[workspace]
resolver = "2"
members = ["lib/content-packs"]

[workspace.dependencies]
blade-graphics = "0.8"
blade-macros = "0.3"

[package]
name = "vandals-and-heroes"
version = "0.1.0"
edition = "2024"
publish = false

[lib]

[[bin]]
name = "game"
path = "bin/game/main.rs"

[[bench]]
name = "particles"
harness = false

[features]
default = []
# Enables Tracy profiling: `cargo run --release --features profile-tracy` will
# emit the `profiling::scope!` annotations to a Tracy server listening on the
# default port. Use this when investigating frame-time regressions.
profile-tracy = ["profiling/profile-with-tracy"]

[dependencies]
base64 = "0.22"
bincode = { version = "2", features = ["serde"] }
choir = "0.7"
env_logger = "0.11"
gltf = "1"
log = "0.4"
nalgebra = "0.34"
png = "0.18"
profiling = "1"
ron = "0.12"
serde = { version = "1", features = ["serde_derive"] }
winit = "0.30"
# graphicis
blade-graphics.workspace = true
blade-macros.workspace = true
bytemuck = { version = "1", features = ["derive"] }
# physics
rapier3d = { version = "0.32", features = ["simd-stable"] }
# Enables From impls between rapier's Pose3/Vec3 and nalgebra's Isometry3/Vector3.
glamx = { version = "0.1", features = ["nalgebra"] }

[dev-dependencies]
criterion = { version = "0.7", default-features = false, features = ["plotters", "cargo_bench_support"] }

#[patch."https://github.com/kvark/blade"]
#blade-graphics = { path = "../blade/blade-graphics" }
#blade-macros = { path = "../blade/blade-macros" }
