[package]
name = "content_packs"
version = "0.1.0"
edition = "2021"

[dependencies]
vandals-and-heroes = { path = "../.." }
winit = "0.30"
ron = "0.8.1"
serde = { version = "1.0.216", features = ["derive"] }
blade-graphics.workspace = true
nalgebra = "0.33"
log = "0.4"
env_logger = "0.11.6"
rapier3d = "0.22"
