[package]
name = "vangers-ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
vandals-and-heroes = { path = "../.." }
raw-window-handle = "0.6.2"
log = "0.4.22"
env_logger = "0.11"
blade-graphics = { git = "https://github.com/kvark/blade", rev = "099555282605c7c4cca9e66a8f40148298347f80" }
ron = "0.8"
nalgebra = "0.33"